12/02/2018 marco.vanadia@cern.ch
   * Setting up repository skeleton