@@ -2,3 +2,8 @@
 
 developer: marco.vanadia@cern.ch
 description: in this project some example classes will be prepared for performing C++ exercises
+
+-->myfirstExample
+
+first example executable, compile with "g++ util/myFirstExample.cxx -o bin/myFirstExample" and execute it with "./bin/myfirstExample"
+	
