@@ -1,0 +1,7 @@
+#include <iostream>
+ 
+int main()
+{
+  std::cout << "welcome in myFirstExample!" << std::endl;
+  return 0;
+}
